--- a/src/components/seller/navbar/Navbar.scss
+++ b/src/components/seller/navbar/Navbar.scss
@@ -340,7 +340,7 @@
                                         color: #6b7280;
                                         line-height: 1.4;
                                         display: -webkit-box;
-                                        -webkit-line-clamp: 2;
+                                        line-clamp: 2;
                                         -webkit-box-orient: vertical;
                                         overflow: hidden;
                                     }
